--- a/package.json
+++ b/package.json
@@ -16,13 +16,22 @@
     "@umijs/max": "^4.0.38",
     "ahooks": "^3.7.3",
     "antd": "^5.0.0",
+    "dayjs": "^1.11.7",
     "for-editor": "^0.3.5",
-    "jsonwebtoken": "^9.0.0"
+    "jsonwebtoken": "^9.0.0",
+    "markdown-navbar": "^1.4.3",
+    "react-markdown": "^8.0.4",
+    "react-syntax-highlighter": "^15.5.0",
+    "rehype-katex": "^6.0.2",
+    "rehype-raw": "^6.1.1",
+    "remark-gfm": "^3.0.1",
+    "remark-math": "^5.1.1"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.9",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-syntax-highlighter": "^15.5.6",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
